--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -2,5 +2,5 @@ date.timezone = "Asia/Tokyo"
 extension=gd.so
 
 [mbstring]
-mbstring.internal_encoding = "UTF-8"
+default_charset = "UTF-8"
 mbstring.language = "Japanese"
