--- a/src/composer.json
+++ b/src/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "stripe/stripe-php": "^9.9"
     },
