--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,11 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
+      - run: sudo apt update && sudo apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev zlib1g-dev libsqlite3-dev
+      # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
+      - run: |
+          sudo docker-php-ext-configure gd --with-freetype --with-jpeg
+          sudo docker-php-ext-install gd
 
       # Download and cache dependencies
       - restore_cache:
