--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,12 +4,10 @@ COPY php.ini /usr/local/etc/php/
 
 RUN apt update \
     && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
-    && docker-php-ext-install pdo_mysql zip
-
-RUN apt-get update && \
-    apt-get install -y libpng-dev libjpeg62-turbo-dev && \
-    docker-php-ext-configure gd --with-jpeg && \
-    docker-php-ext-install -j$(nproc) gd
+    && apt-get install -y libpng-dev libjpeg62-turbo-dev libfreetype6-dev libsqlite3-dev \
+    && docker-php-ext-install pdo_mysql zip \
+    && docker-php-ext-configure gd --with-jpeg --with-freetype \
+    && docker-php-ext-install -j$(nproc) gd
 
 RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/composer \
