--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # Specify the version you desire here
-      - image: cimg/php:8.1-browsers
+      - image: cimg/php:8.1-node-browser
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -26,7 +26,11 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt update && sudo apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev zlib1g-dev libsqlite3-dev
+      - run: |
+          -sudo apt update 
+          -sudo apt-get install -y unzip
+          -curl-sS https://getcomposer.org/installer | php
+          -sudo mv composer.phar /usr/local/bin/composer
       # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: |
           sudo docker-php-ext-configure gd --with-freetype --with-jpeg
@@ -40,7 +44,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: composer install -n --prefer-dist
+      - run: composer install -n --prefer-dist --ignore-platform-req=ext-gd
 
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
