--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,25 +10,14 @@ jobs:
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # Specify the version you desire here
-      - image: circleci/php:7.1-node-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/circleci-images/
-      # Using the RAM variation mitigates I/O contention
-      # for database intensive operations.
-      # - image: circleci/mysql:5.7-ram
-      #
-      # - image: redis:2.8.19
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: circleci/php:8.1-node-browsers
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
-
+      - run: sudo apt update && sudo apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev zlib1g-dev libsqlite3-dev
+      - run: |
+          sudo docker-php-ext-configure gd --with-freetype --with-jpeg
+          sudo docker-php-ext-install gd
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -37,7 +26,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: composer install -n --prefer-dist --ignore-platform-req=ext-gd
+      - run: composer install -n --prefer-dist --ignore-platform-reqs
 
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
