--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,43 +10,44 @@ jobs:
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # Specify the version you desire here
-      - image: cimg/php:8.1-node
+      - image: cimg/php:8.1-browsers
+      - image: cimg/mysql8.0
+        environment:
+          MYSQL_DATABASE: demo_test
+          MYSQL_ROOT_PASSWORD: root
+    environment:
+      APP_ENV: test
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: demo_test
+      DB_USERNAME: root
+      DB_PASSWORD: root
+    services:
+      - mysql:8.0
     steps:
       - checkout
-
-      - run: sudo apt update && sudo apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev zlib1g-dev libsqlite3-dev
-      - run: |
-          sudo docker-php-ext-configure gd --with-freetype --with-jpeg
-          sudo docker-php-ext-install gd
-      # Download and cache dependencies
+      - run: sudo composer self-update --1
       - restore_cache:
-          keys:
-            # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: composer install -n --prefer-dist --ignore-platform-reqs
-
+          key: composer-v1-{{ checksum "composer.lock" }}
+      - run: composer install -n --prefer-dist
       - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
+          key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-            - ./vendor
+            - vendor
       - restore_cache:
-          keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
-      - run: yarn install
+          key: npm-v1-{{ checksum "package-lock.json" }}
+      - run:
+          name: npm ci
+          command: |
+            if [ ! -d node_modules ]; then
+              npm ci
+            fi
       - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
+          key: npm-v1-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-
-      # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=sqlite_testing --force
-
-      # run tests with phpunit or codecept
-      #- run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
+      - run: npm run dev
+      - run:
+        name: php test
+        command: vendor/bin/phpunit
