--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: root
     environment:
       APP_ENV: test
-      DB_CONNECTION: mysql
+      DB_CONNECTION: mysql_test
       DB_HOST: 127.0.0.1
       DB_PORT: 3306
       DB_DATABASE: demo_test
