--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
-jobs:
-  build:
+executors:
+  docker-executor:
     docker:
       - image: cimg/php:8.1-browsers
-      - image: cimg/mysql8.0
+      - image: cimg/mysql:8.0
         environment:
           MYSQL_DATABASE: demo_test
           MYSQL_ROOT_PASSWORD: root
