--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,10 @@
 version: 2.1
 executors:
-  docker-executor:
-    docker:
-      - image: cimg/php:8.1-browsers
-      - image: cimg/mysql:8.0
-        environment:
-          MYSQL_DATABASE: demo_test
-          MYSQL_ROOT_PASSWORD: root
+  docker-executor: cimg/php:8.1-browsers
+
+jobs:
+  build:
+    executor: docker-executor
     environment:
       APP_ENV: test
       DB_CONNECTION: mysql_test
