--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,26 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/php:8.1-node
-        auth:
-          username: mydockerhub_user
-          password: password
-      - image: cimg/mysql8.0
-        auth:
-          username: mydockerhub_user
-          password: password
-        environment:
-          MYSQL_DATABASE: demo_test
-          MYSQL_ROOT_PASSWORD: root
-    environment:
-      APP_ENV: test
-      DB_CONNECTION: mysql_test
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
-      DB_DATABASE: demo_test
-      DB_USERNAME: root
-      DB_PASSWORD: root
-
+      - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
       - run: sudo composer self-update --1
