--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,6 @@ jobs:
             - vendor
       - run:
           name: php test
-          command: src/vendor/bin/phpunit
+          command: |
+            cd src
+            vendor/bin/phpunit
