--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
             - vendor
+      - run: pwd
+      - run: ls
       - run:
           name: php test
-          command: |
-            cd src
-            vendor/bin/phpunit tests\
+          command: vendor/bin/phpunit tests/Feature
