--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,12 @@ jobs:
             - vendor
       - run: pwd
       - run: ls
+      - run: cd src
+      - run: ls
+      - run: cd vendor
+      - run: ls
+      - run: cd bin
+      - run: ls
       - run:
           name: php test
           command: vendor/bin/phpunit tests/Feature
