--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,49 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/php:7.3-node-browsers
+      - image: circleci/php:7.4-node-browsers
     steps:
       - checkout
-      - run: sudo composer self-update --2
+
+      - run:
+        working_directory: src
+        command: sudo composer self-update --2
       - restore_cache:
-          key: composer-v1-{{ checksum "composer.lock" }}
-      - run: composer install -n --prefer-dist --ignore-platform-reqs
+          key: composer-v1-{{ checksum "src/composer.lock" }}
+      - run:
+        working_directory: src
+        command: composer install -n --prefer-dist --ignore-platform-reqs
       - save_cache:
-          key: composer-v1-{{ checksum "composer.lock" }}
+          key: composer-v1-{{ checksum "src/composer.lock" }}
           paths:
-            - vendor
+            - src/vendor
+
+      - restore_cache:
+          key: npm-v2-{{ checksum "src/package-lock.json" }}
+      - run:
+          working_directory: src
+          name: npm ci
+          command: |
+            if [ ! -d node_modules ]; then
+              npm ci
+            fi
+      - save_cache:
+          key: npm-v2-{{ checksum "src/package-lock.json" }}
+          paths:
+            - src/node_modules
+      - run:
+          working_directory: src
+          command: npm run dev
+      - run:
+          working_directory: src
+          name: php test
+          command: vendor/bin/phpunit
+
+orbs:
+  aws-cli: circleci/aws-cli@1.0.0
+
+workflows:
+  version: 2
+  build_deploy:
+    jobs:
+      - build
